SET(TARGET_NAME "proland")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES(${GLEW_INC_DIR})
LINK_DIRECTORIES (${GLEW_LIB_DIR})

INCLUDE_DIRECTORIES(${GLUT_INC_DIR})
LINK_DIRECTORIES (${GLUT_LIB_DIR})

INCLUDE_DIRECTORIES(${ATB_INC_DIR})
LINK_DIRECTORIES (${ATB_LIB_DIR})

INCLUDE_DIRECTORIES(${TIFF_INC_DIR})
LINK_DIRECTORIES (${TIFF_LIB_DIR})

INCLUDE_DIRECTORIES(${PTHREADS_INC_DIR})
LINK_DIRECTORIES (${PTHREADS_LIB_DIR})

INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (ork)
INCLUDE_DIRECTORIES (core)
INCLUDE_DIRECTORIES (atmo)
INCLUDE_DIRECTORIES (edit)
INCLUDE_DIRECTORIES (forest)
INCLUDE_DIRECTORIES (graph)
INCLUDE_DIRECTORIES (ocean)
INCLUDE_DIRECTORIES (river)
INCLUDE_DIRECTORIES (terrain)

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DTIXML_USE_STL)
ADD_DEFINITIONS(${OSG_FLAGS})
ADD_DEFINITIONS(${GLEW_FLAGS})

IF(MSVC)
	SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT")
ENDIF()

FILE(GLOB_RECURSE PUBLIC_HEADERS "*.h" "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_MSVC_PRECOMPILED_HEADER("proland.h" "proland.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} "luna/register_proland.cpp")

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS} ${BOOST_LIBS} ${GLEW_LIBS} ${PTHREADS_LIBS} ${GLUT_LIBS} ${OSG_LIBS} ${ATB_LIBS} ${TIFF_LIBS}) 

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})
	
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")
	
SET(INTF_FILES)

ADD_FILES(INTF_FILES "../interface/helpers.h")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")

SET(EXPAND_AS_DEFINED)

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

COMPRESS_BINARY()
INSTALL_PDB(${TARGET_NAME} "modules/")
	