SET(TARGET_NAME "spice")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtCore/include)

INCLUDE_DIRECTORIES(${SPICE_INC_DIR})
LINK_DIRECTORIES (${SPICE_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DMSDOS)
ADD_DEFINITIONS(${OSG_FLAGS})

SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /NODEFAULTLIB:LIBCMT.lib")

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS} ${OSG_LIBS} ${SPICE_LIBS} OpenGL32.lib GLU32.lib)  


INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# step needed for the generation of the XML documentation:
SET(INCLUDE_PATH ${SPICE_INC_DIR})

SET(INTF_FILES)
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceZpl.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceZdf.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceEK.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceCel.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceCK.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceSPK.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceGF.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceZpr.h")
LIST(APPEND INTF_FILES "${SPICE_INC_DIR}/SpiceZim.h")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED )
SET(FILE_PATTERNS )
GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)
COMPRESS_BINARY()
