SET(TARGET_NAME "ssl")
SET(TARGET_DIR "bin/${FLAVOR}/modules")

INCLUDE_DIRECTORIES(../include)

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

INCLUDE_DIRECTORIES(${OPENSSL_INC_DIR})
LINK_DIRECTORIES (${OPENSSL_LIB_DIR})


FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

IF(WIN32)
	SET(SOCKET_SRC wsocket.c)
ELSE()
	SET(SOCKET_SRC usocket.c)
ENDIF()
	
ADD_LIBRARY (${TARGET_NAME} SHARED  timeout.c
	buffer.c
	io.c
	context.c
	ssl.c 
	${SOCKET_SRC}
	${PUBLIC_HEADERS}
	ssl.def )

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS} ${OPENSSL_LIBS} ${FLAVOR_LIBS})  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	PREFIX ""
	SUFFIX ".sgp")
    
INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
